@@ -2,6 +2,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+pts-core: Add TurnCharsToSpace support to result parser
 pts_Graph: Fix multi-way comparison detection
 
 Phoronix Test Suite 7.2.0 Milestone 4
